--- a/src/App.css
+++ b/src/App.css
@@ -3,52 +3,40 @@ body {
   background-color: #f4f4f4;
 }
 
-header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  background-color: #333;
-  color: white;
-  padding: 10px 0;
-  text-align: center;
-  z-index: 1000;
-}
-
-header img {
-  width: 50px;
-  vertical-align: middle;
-}
-
-header h1 {
-  display: inline;
-  margin-left: 15px;
-  vertical-align: middle;
-}
-
 .news-container {
+  background-color: #F1F2F3;
   padding-top: 100px;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(5, 1fr);
-  grid-column-gap: 25px;
-  grid-row-gap: 25px;
+  max-width: 1024px;
   align-items: center;
+  display: grid;
+  grid-template-columns: 33.33% 33.33% 33.33%;
+  margin-bottom: 15px;
+  justify-items: center;
   gap: 20px;
+  margin: 0 auto;
 }
 
-.featured-news {
+/* .featured-news {
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 20px;
   width: 80%;
   text-align: center;
-}
+} */
 
 .news-card {
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 20px;
-  width: 300px;
+  width: auto;
+  height: auto;
+  text-align: start;
+}
+
+.date-more {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
