separando a noticia em destaque

--- a/src/App.css
+++ b/src/App.css
@@ -16,14 +16,11 @@ body {
   margin: 0 auto;
 }
 
-/* .featured-news {
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+.featured-news {
   padding: 20px;
   width: 80%;
   text-align: center;
-} */
+}
 
 .news-card {
   background-color: #fff;
