--- a/src/App.css
+++ b/src/App.css
@@ -17,9 +17,12 @@ body {
 }
 
 .featured-news {
+  display: flex;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 20px;
-  width: 80%;
-  text-align: center;
+  width: 100%;
 }
 
 .news-card {
